(Aegis) add new parameters; introduce presets in docs

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -67,6 +67,12 @@ STR_PARAM_PRIMARY_INDUSTRY_ZONING_PRESET            :Preset
 STR_PARAM_PRIMARY_INDUSTRY_ZONING_DISABLED          :Disabled
 STR_PARAM_PRIMARY_INDUSTRY_ZONING_ENABLED           :Enabled
 
+STR_PARAM_SECONDARY_INDUSTRY_PROCESSING             :Secondary Industry - Processing
+STR_PARAM_SECONDARY_INDUSTRY_PROCESSING_DESC        :Choose how secondary industry with multiple inputs process their goods.
+STR_PARAM_SECONDARY_INDUSTRY_PROCESSING_PRESET      :Preset
+STR_PARAM_SECONDARY_INDUSTRY_PROCESSING_STRICT      :Strict
+STR_PARAM_SECONDARY_INDUSTRY_PROCESSING_NORMAL      :Normal
+
 STR_PARAM_INDUSTRY_SIZE         :Graphics - Industry Size
 STR_PARAM_INDUSTRY_SIZE_DESC    :Choose the visual size of the industries
 STR_PARAM_INDUSTRY_SIZE_EXTRA_LARGE:Extra Large
