(Aegis) start adding a fourth economy

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -125,3 +125,4 @@ STR_CARGO_FMSP                  :Farm Supplies
 STR_CARGO_ENSP                  :Engineering Supplies
 STR_CARGO_WATR                  :Water
 STR_CARGO_OTI1                  :Workers
+STR_CARGO_PORE                  :Pyrite Ore
