--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -126,3 +126,11 @@ STR_CARGO_ENSP                  :Engineering Supplies
 STR_CARGO_WATR                  :Water
 STR_CARGO_OTI1                  :Workers
 STR_CARGO_PORE                  :Pyrite Ore
+STR_CARGO_PHOS                  :Phosphate
+STR_CARGO_PEAT                  :Peat
+STR_CARGO_SULP                  :Sulphur
+STR_CARGO_ZINC                  :Zinc
+STR_CARGO_WDPR                  :Timber
+STR_CARGO_NH3_                  :Ammonia
+STR_CARGO_BOOM                  :Explosives
+STR_CARGO_FERT                  :Fertiliser
