(Aegis) translate fish

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -136,3 +136,4 @@ STR_CARGO_BOOM                  :Explosives
 STR_CARGO_FERT                  :Fertiliser
 STR_CARGO_KAOL                  :China Clay
 STR_CARGO_POTA                  :Potash
+STR_CARGO_FISH                  :Fish
