--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -75,7 +75,8 @@ STR_PARAM_SECONDARY_INDUSTRY_PROCESSING_NORMAL      :Normal
 
 STR_PARAM_INDUSTRY_SIZE         :Graphics - Industry Size
 STR_PARAM_INDUSTRY_SIZE_DESC    :Choose the visual size of the industries
-STR_PARAM_INDUSTRY_SIZE_EXTRA_LARGE:Extra Large
+STR_PARAM_INDUSTRY_SIZE_ENORMOUS:Enormous
+STR_PARAM_INDUSTRY_SIZE_HUGE    :Huge
 STR_PARAM_INDUSTRY_SIZE_LARGE   :Large
 STR_PARAM_INDUSTRY_SIZE_REGULAR :Regular
 STR_PARAM_INDUSTRY_SIZE_SMALL   :Small
