(Aegis) a more readable string-based pseudoswitch

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -86,7 +86,7 @@ STR_PARAM_INDUSTRY_SIZE_DESC    :Choose the visual size of the industries
 STR_PARAM_INDUSTRY_SIZE_ENORMOUS:Enormous
 STR_PARAM_INDUSTRY_SIZE_HUGE    :Huge
 STR_PARAM_INDUSTRY_SIZE_LARGE   :Large
-STR_PARAM_INDUSTRY_SIZE_REGULAR :Regular
+STR_PARAM_INDUSTRY_SIZE_MEDIUM  :Medium
 STR_PARAM_INDUSTRY_SIZE_SMALL   :Small
 STR_PARAM_INDUSTRY_SIZE_TINY    :Tiny
 STR_PARAM_INDUSTRY_SIZE_ONE_TILE:One Tile
