--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -52,9 +52,10 @@ STR_PARAM_WORKFORCE_YETI_MAIL               :Exclusive (Mail)
 STR_PARAM_WORKFORCE_YETI_TIRED              :Exclusive (Tired Worker)
 
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH                   :Primary Industry - Growth
-STR_PARAM_PRIMARY_INDUSTRY_GROWTH_DESC              :Choose how does primary industries change their production.{}{}None - No change{}Generic Supplies - productions are boosted when supplied with Farming/Engineering Supplies{}Specific Supplies - productions are boosted when supplied with specific cargos{}Workers - productions are boosted when supplied with workers{}Discrete - productions change randomly, depending on whether its output is used{}Continuous - production change randomly, with many levels possible.
+STR_PARAM_PRIMARY_INDUSTRY_GROWTH_DESC              :Choose how does primary industries change their production.{}{}None - No change{}Universal Supplies - productions are boosted when supplied with a universal type of supplies{}Generic Supplies - productions are boosted when supplied with Farming/Engineering Supplies{}Specific Supplies - productions are boosted when supplied with specific cargos{}Workers - productions are boosted when supplied with workers{}Discrete - productions change randomly, depending on whether its output is used{}Continuous - production change randomly, with many levels possible.
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_PRESET            :Preset
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_NONE              :None
+STR_PARAM_PRIMARY_INDUSTRY_GROWTH_UNIVERSAL_SUPPLIES:Universal Supplies
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_GENERIC_SUPPLIES  :Generic Supplies
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_SPECIFIC_SUPPLIES :Specific Supplies
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_WORKERS           :Workers
