--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -51,6 +51,14 @@ STR_PARAM_WORKFORCE_YETI_PASSENGERS         :Exclusive (Passengers)
 STR_PARAM_WORKFORCE_YETI_MAIL               :Exclusive (Mail)
 STR_PARAM_WORKFORCE_YETI_TIRED              :Exclusive (Tired Worker)
 
+STR_PARAM_TOWN_GOODS            :Towns - Growth Requirements
+STR_PARAM_TOWN_GOODS_DESC       :Choose whether food and/or water are required for town growth. Note that this only functions in the appropriate climate.
+STR_PARAM_TOWN_GOODS_PRESET     :Preset
+STR_PARAM_TOWN_GOODS_ORGANIC    :Organic
+STR_PARAM_TOWN_GOODS_NONE       :None
+STR_PARAM_TOWN_GOODS_FOOD       :Food
+STR_PARAM_TOWN_GOODS_FOOD_AND_WATER:Food and Water
+
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH                   :Primary Industry - Growth
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_DESC              :Choose how does primary industries change their production.{}{}None - No change{}Universal Supplies - productions are boosted when supplied with a universal type of supplies{}Generic Supplies - productions are boosted when supplied with Farming/Engineering Supplies{}Specific Supplies - productions are boosted when supplied with specific cargos{}Workers - productions are boosted when supplied with workers{}Discrete - productions change randomly, depending on whether its output is used{}Continuous - production change randomly, with many levels possible.
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_PRESET            :Preset
