(Aegis) Translate industry names

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -213,3 +213,54 @@ STR_CARGO_UNIT_WHEA                  :{WEIGHT} of wheat
 STR_CARGO_UNIT_WOOD                  :{WEIGHT} of logs
 STR_CARGO_UNIT_WRKR                  :{SIGNED_WORD} worker{P 0 "" s}
 STR_CARGO_UNIT_ZINC                  :{WEIGHT} of zinc
+
+STR_INDUSTRY_NAME_AMMONIA_PLANT     :Ammonia Plant
+STR_INDUSTRY_NAME_BANK              :Bank
+STR_INDUSTRY_NAME_CHEMICAL_PLANT    :Chemical Plant
+STR_INDUSTRY_NAME_CIDER_MILL        :Cider Mill
+STR_INDUSTRY_NAME_CLAY_PIT          :Clay Pit
+STR_INDUSTRY_NAME_COAL_MINE         :Coal Mine
+STR_INDUSTRY_NAME_COPPER_ORE_MINE   :Copper Ore Mine
+STR_INDUSTRY_NAME_DAIRY             :Dairy
+STR_INDUSTRY_NAME_DIARY_FARM        :Dairy Farm
+STR_INDUSTRY_NAME_DIAMOND_MINE      :Diamond Mine
+STR_INDUSTRY_NAME_DREDGING_SITE     :Dredging Site
+STR_INDUSTRY_NAME_FACTORY           :Factory
+STR_INDUSTRY_NAME_FARM              :Farm
+STR_INDUSTRY_NAME_FISH_FARM         :Fish Farm
+STR_INDUSTRY_NAME_FISHING_GROUNDS   :Fishing Grounds
+STR_INDUSTRY_NAME_FISHING_HARBOR    :Fishing Harbor
+STR_INDUSTRY_NAME_FOOD_PROCESSING_PLANT :Food Processing Plant
+STR_INDUSTRY_NAME_FOREST            :Forest
+STR_INDUSTRY_NAME_FRUIT_PLANTATION  :Fruit Plantation
+STR_INDUSTRY_NAME_GENERAL_STORE     :General Store
+STR_INDUSTRY_NAME_GLASS_WORKS       :Glass Works
+STR_INDUSTRY_NAME_GOLD_MINE         :Gold Mine
+STR_INDUSTRY_NAME_HERDING_CO_OP     :Herding Co-op
+STR_INDUSTRY_NAME_IRON_ORE_MINE     :Iron Ore Mine
+STR_INDUSTRY_NAME_LUMBER_MILL       :Lumber Mill
+STR_INDUSTRY_NAME_METAL_WORKSHOP    :Metal Workshop
+STR_INDUSTRY_NAME_OIL_REFINERY      :Oil Refinery
+STR_INDUSTRY_NAME_OIL_RIG           :Oil Rig
+STR_INDUSTRY_NAME_OIL_WELL          :Oil Well
+STR_INDUSTRY_NAME_ORCHARD_AND_PIGGERY   :Orchard and Piggery
+STR_INDUSTRY_NAME_PAPER_MILL        :Paper Mill
+STR_INDUSTRY_NAME_PEATLANDS         :Peatlands
+STR_INDUSTRY_NAME_PHOSPHATE_MINE    :Phosphate Mine
+STR_INDUSTRY_NAME_PORT              :Port
+STR_INDUSTRY_NAME_POTASH_MINE       :Potash Mine
+STR_INDUSTRY_NAME_POWER_STATION     :Power Station
+STR_INDUSTRY_NAME_PRINTING_WORKS    :Printing Works
+STR_INDUSTRY_NAME_PYRITE_MINE       :Pyrite Mine
+STR_INDUSTRY_NAME_PYRITE_SMELTER    :Pyrite Smelter
+STR_INDUSTRY_NAME_RUBBER_PLANTATION :Rubber Plantation
+STR_INDUSTRY_NAME_SAWMILL           :Sawmill
+STR_INDUSTRY_NAME_SCRAP_YARD        :Scrap Yard
+STR_INDUSTRY_NAME_STEEL_MILL        :Steel Mill
+STR_INDUSTRY_NAME_STOCKYARD         :Stockyard
+STR_INDUSTRY_NAME_TOWNS             :Towns
+STR_INDUSTRY_NAME_TRADING_CENTRE    :Trading Centre
+STR_INDUSTRY_NAME_WATER_SUPPLY      :Water Supply
+STR_INDUSTRY_NAME_WATER_TOWER       :Water Tower
+STR_INDUSTRY_NAME_WHARF             :Wharf
+STR_INDUSTRY_NAME_WORKER_YARD       :Worker Yard
