(Aegis) Add Chinese translations

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -121,3 +121,54 @@ STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
 STR_PARAM_NIGHT_MODE_DISABLED   :不使用
 STR_PARAM_NIGHT_MODE_ENABLED    :使用
+
+STR_INDUSTRY_NAME_AMMONIA_PLANT     :制氨厂
+STR_INDUSTRY_NAME_BANK              :银行
+STR_INDUSTRY_NAME_CHEMICAL_PLANT    :化工厂
+STR_INDUSTRY_NAME_CIDER_MILL        :苹果酒厂
+STR_INDUSTRY_NAME_CLAY_PIT          :粘土矿坑
+STR_INDUSTRY_NAME_COAL_MINE         :煤矿
+STR_INDUSTRY_NAME_COPPER_ORE_MINE   :铜矿山
+STR_INDUSTRY_NAME_DAIRY             :乳品厂
+STR_INDUSTRY_NAME_DIARY_FARM        :乳牛场
+STR_INDUSTRY_NAME_DIAMOND_MINE      :钻石矿
+STR_INDUSTRY_NAME_DREDGING_SITE     :疏浚区
+STR_INDUSTRY_NAME_FACTORY           :工厂
+STR_INDUSTRY_NAME_FARM              :农场
+STR_INDUSTRY_NAME_FISH_FARM         :渔村
+STR_INDUSTRY_NAME_FISHING_GROUNDS   :渔场
+STR_INDUSTRY_NAME_FISHING_HARBOR    :渔港
+STR_INDUSTRY_NAME_FOOD_PROCESSING_PLANT :食品加工厂
+STR_INDUSTRY_NAME_FOREST            :森林
+STR_INDUSTRY_NAME_FRUIT_PLANTATION  :Fruit Plantation
+STR_INDUSTRY_NAME_GENERAL_STORE     :综合商店
+STR_INDUSTRY_NAME_GLASS_WORKS       :玻璃制品厂
+STR_INDUSTRY_NAME_GOLD_MINE         :金矿
+STR_INDUSTRY_NAME_HERDING_CO_OP     :狩猎营
+STR_INDUSTRY_NAME_IRON_ORE_MINE     :Iron Ore Mine
+STR_INDUSTRY_NAME_LUMBER_MILL       :Lumber Mill
+STR_INDUSTRY_NAME_METAL_WORKSHOP    :金属车间
+STR_INDUSTRY_NAME_OIL_REFINERY      :Oil Refinery
+STR_INDUSTRY_NAME_OIL_RIG           :Oil Rig
+STR_INDUSTRY_NAME_OIL_WELLS         :Oil Well
+STR_INDUSTRY_NAME_ORCHARD_AND_PIGGERY   :生态农场
+STR_INDUSTRY_NAME_PAPER_MILL        :造纸厂
+STR_INDUSTRY_NAME_PEATLANDS         :泥煤地
+STR_INDUSTRY_NAME_PHOSPHATE_MINE    :磷矿山
+STR_INDUSTRY_NAME_PORT              :港口
+STR_INDUSTRY_NAME_POTASH_MINE       :钾矿
+STR_INDUSTRY_NAME_POWER_STATION     :Power Station
+STR_INDUSTRY_NAME_PRINTING_WORKS    :Printing Works
+STR_INDUSTRY_NAME_PYRITE_MINE       :黄铁矿山
+STR_INDUSTRY_NAME_PYRITE_SMELTER    :黄铁矿冶炼厂
+STR_INDUSTRY_NAME_RUBBER_PLANTATION :Rubber Plantation
+STR_INDUSTRY_NAME_SAWMILL           :Sawmill
+STR_INDUSTRY_NAME_SCRAP_YARD        :废料场
+STR_INDUSTRY_NAME_STEEL_MILL        :Steel Mill
+STR_INDUSTRY_NAME_STOCKYARD         :肉联厂
+STR_INDUSTRY_NAME_TOWNS             :城镇
+STR_INDUSTRY_NAME_TRADING_CENTRE    :贸易中心
+STR_INDUSTRY_NAME_WATER_SUPPLY      :水源
+STR_INDUSTRY_NAME_WATER_TOWER       :水塔
+STR_INDUSTRY_NAME_WHARF             :码头
+STR_INDUSTRY_NAME_WORKER_YARD       :工人之家
