--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -242,7 +242,7 @@ STR_INDUSTRY_NAME_LUMBER_MILL       :Lumber Mill
 STR_INDUSTRY_NAME_METAL_WORKSHOP    :Metal Workshop
 STR_INDUSTRY_NAME_OIL_REFINERY      :Oil Refinery
 STR_INDUSTRY_NAME_OIL_RIG           :Oil Rig
-STR_INDUSTRY_NAME_OIL_WELL          :Oil Well
+STR_INDUSTRY_NAME_OIL_WELLS         :Oil Wells
 STR_INDUSTRY_NAME_ORCHARD_AND_PIGGERY   :Orchard and Piggery
 STR_INDUSTRY_NAME_PAPER_MILL        :Paper Mill
 STR_INDUSTRY_NAME_PEATLANDS         :Peatlands
