Add Chinese translations

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -139,8 +139,8 @@ STR_INDUSTRY_NAME_FISH_FARM         :渔村
 STR_INDUSTRY_NAME_FISHING_GROUNDS   :渔场
 STR_INDUSTRY_NAME_FISHING_HARBOR    :渔港
 STR_INDUSTRY_NAME_FOOD_PROCESSING_PLANT :食品加工厂
-STR_INDUSTRY_NAME_FOREST            :森林
-STR_INDUSTRY_NAME_FRUIT_PLANTATION  :Fruit Plantation
+STR_INDUSTRY_NAME_FOREST            :林场
+STR_INDUSTRY_NAME_FRUIT_PLANTATION  :果园
 STR_INDUSTRY_NAME_GENERAL_STORE     :综合商店
 STR_INDUSTRY_NAME_GLASS_WORKS       :玻璃制品厂
 STR_INDUSTRY_NAME_GOLD_MINE         :金矿
@@ -148,23 +148,23 @@ STR_INDUSTRY_NAME_HERDING_CO_OP     :狩猎营
 STR_INDUSTRY_NAME_IRON_ORE_MINE     :Iron Ore Mine
 STR_INDUSTRY_NAME_LUMBER_MILL       :Lumber Mill
 STR_INDUSTRY_NAME_METAL_WORKSHOP    :金属车间
-STR_INDUSTRY_NAME_OIL_REFINERY      :Oil Refinery
-STR_INDUSTRY_NAME_OIL_RIG           :Oil Rig
-STR_INDUSTRY_NAME_OIL_WELLS         :Oil Well
+STR_INDUSTRY_NAME_OIL_REFINERY      :炼油厂
+STR_INDUSTRY_NAME_OIL_RIG           :钻井平台
+STR_INDUSTRY_NAME_OIL_WELLS         :油田
 STR_INDUSTRY_NAME_ORCHARD_AND_PIGGERY   :生态农场
 STR_INDUSTRY_NAME_PAPER_MILL        :造纸厂
 STR_INDUSTRY_NAME_PEATLANDS         :泥煤地
 STR_INDUSTRY_NAME_PHOSPHATE_MINE    :磷矿山
 STR_INDUSTRY_NAME_PORT              :港口
 STR_INDUSTRY_NAME_POTASH_MINE       :钾矿
-STR_INDUSTRY_NAME_POWER_STATION     :Power Station
-STR_INDUSTRY_NAME_PRINTING_WORKS    :Printing Works
+STR_INDUSTRY_NAME_POWER_STATION     :火力发电厂
+STR_INDUSTRY_NAME_PRINTING_WORKS    :印刷厂
 STR_INDUSTRY_NAME_PYRITE_MINE       :黄铁矿山
 STR_INDUSTRY_NAME_PYRITE_SMELTER    :黄铁矿冶炼厂
-STR_INDUSTRY_NAME_RUBBER_PLANTATION :Rubber Plantation
-STR_INDUSTRY_NAME_SAWMILL           :Sawmill
+STR_INDUSTRY_NAME_RUBBER_PLANTATION :橡胶园
+STR_INDUSTRY_NAME_SAWMILL           :锯木厂
 STR_INDUSTRY_NAME_SCRAP_YARD        :废料场
-STR_INDUSTRY_NAME_STEEL_MILL        :Steel Mill
+STR_INDUSTRY_NAME_STEEL_MILL        :钢铁厂
 STR_INDUSTRY_NAME_STOCKYARD         :肉联厂
 STR_INDUSTRY_NAME_TOWNS             :城镇
 STR_INDUSTRY_NAME_TRADING_CENTRE    :贸易中心
