(Aegis) Finish translation

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -145,8 +145,8 @@ STR_INDUSTRY_NAME_GENERAL_STORE     :综合商店
 STR_INDUSTRY_NAME_GLASS_WORKS       :玻璃制品厂
 STR_INDUSTRY_NAME_GOLD_MINE         :金矿
 STR_INDUSTRY_NAME_HERDING_CO_OP     :狩猎营
-STR_INDUSTRY_NAME_IRON_ORE_MINE     :Iron Ore Mine
-STR_INDUSTRY_NAME_LUMBER_MILL       :Lumber Mill
+STR_INDUSTRY_NAME_IRON_ORE_MINE     :铁矿
+STR_INDUSTRY_NAME_LUMBER_MILL       :伐木场
 STR_INDUSTRY_NAME_METAL_WORKSHOP    :金属车间
 STR_INDUSTRY_NAME_OIL_REFINERY      :炼油厂
 STR_INDUSTRY_NAME_OIL_RIG           :钻井平台
@@ -168,7 +168,7 @@ STR_INDUSTRY_NAME_STEEL_MILL        :钢铁厂
 STR_INDUSTRY_NAME_STOCKYARD         :肉联厂
 STR_INDUSTRY_NAME_TOWNS             :城镇
 STR_INDUSTRY_NAME_TRADING_CENTRE    :贸易中心
-STR_INDUSTRY_NAME_WATER_SUPPLY      :水源
+STR_INDUSTRY_NAME_WATER_SUPPLY      :水厂
 STR_INDUSTRY_NAME_WATER_TOWER       :水塔
 STR_INDUSTRY_NAME_WHARF             :码头
 STR_INDUSTRY_NAME_WORKER_YARD       :工人之家
